# miscellaneous_stuff_in_c

./: meson.build
examples/: gmocoin_status.c  gmocoin_trades.c
include/: activation.h  gmocoin.h  layer.h  linear.h  tensor.h  xorshift.h
src/: activation.c  gmocoin.c  gmocoin.pxd  gmocoin.pyx  gmocoin_download_trades.c  linear.c  main.c  tensor.c  xorshift.c
